k8s/wg-easy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-easy
  namespace: joledev-vpn
  labels:
    app: wg-easy
spec:
  selector:
    app: wg-easy
  ports:
    - name: web-ui
      port: 51821
      targetPort: 51821
      protocol: TCP
  type: ClusterIP
